<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="xit.zubrein.gogocarrier.model.ModelDashboard" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.dashboard.DashboardActivity">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/back"
                android:padding="8dp"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/back"
                android:layout_centerVertical="true"
                android:text="@string/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_filter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>

        <ProgressBar
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="200dp">

            <LinearLayout
                android:layout_margin="15dp"
                android:background="@drawable/rectangle_green_outline"
                android:gravity="center"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/orders_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@{``+model.completed_order}"
                    tools:text="300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="15dp"
                android:background="@drawable/rectangle_green_outline"
                android:gravity="center"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/pending_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@{``+model.pending_order}"
                    tools:text="20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="200dp">

            <LinearLayout
                android:layout_margin="15dp"
                android:background="@drawable/rectangle_green_outline"
                android:gravity="center"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/total_earning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@{`TK `+model.total_earn}"
                    tools:text="TK 3000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="15dp"
                android:background="@drawable/rectangle_green_outline"
                android:gravity="center"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/total_deposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    tools:text="TK 2000"
                    android:text="@{`TK `+model.total_deposit}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>