<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="25dp"
            android:layout_height="25dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_thin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:visibility="gone"
                android:id="@+id/today_select_button"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_solid" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/this_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="25dp"
            android:layout_height="25dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_thin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:visibility="gone"
                android:id="@+id/this_week_select_button"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_solid" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:text="@string/this_week"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/this_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="25dp"
            android:layout_height="25dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_thin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:visibility="gone"
                android:id="@+id/this_month_select_button"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_solid" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:text="@string/this_month"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="25dp"
            android:layout_height="25dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_thin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:visibility="gone"
                android:id="@+id/all_select_button"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/circle_green_solid" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:text="@string/all"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@color/gray"/>



</LinearLayout>